--- a/setup.cfg
+++ b/setup.cfg
@@ -9,18 +9,8 @@ isort-show-traceback = True
 format = wemake
 show-source = True
 extend-ignore = E203
+ignore = Q000
 
-[isort]
-# See https://github.com/timothycrosley/isort#multi-line-output-modes
-multi_line_output = 3
-include_trailing_comma = true
-default_section = FIRSTPARTY
-# Should be: 80 - 1
-line_length = 79
-
-[tool:pytest]
-norecursedirs = tests/fixtures *.egg .eggs dist build docs .tox .git __pycache__
-addopts = --strict-markers
 
 [coverage:run]
 branch = True
